separate trajectories visualization

--- a/index.html
+++ b/index.html
@@ -149,7 +149,12 @@
                         <div class="column is-four-fifths">
                             <h2 class="title is-3">Dataset</h2>
                         </div>
-                    </div>            
+                    </div>
+                    <div class="columns is-centered has-text-centered">
+                        <div class="column is-four-fifths">
+                            <h2 class="title is-4">Tello</h2>
+                        </div>
+                    </div>  
                     <div id="results-carousel" class="carousel results-carousel">
                         <div class="item">
                             <!-- Your image here -->
@@ -182,6 +187,16 @@
                                 Tello trajectory T5
                             </h2>
                         </div>
+                    </div>
+
+                    <br>
+
+                    <div class="columns is-centered has-text-centered">
+                        <div class="column is-four-fifths">
+                            <h2 class="title is-4">Autel</h2>
+                        </div>
+                    </div>
+                    <div id="results-carousel" class="carousel results-carousel">
                         <div class="item">
                             <div id='autel_track_1'></div>
                             <h2 class="subtitle has-text-centered">
@@ -209,9 +224,19 @@
                         <div class="item">
                             <div id='autel_track_5'></div>
                             <h2 class="subtitle has-text-centered">
-                                Holybro trajectory T5
+                                Autel trajectory T5
                             </h2>
                         </div>
+                    </div>
+
+                    <br>
+                    
+                    <div class="columns is-centered has-text-centered">
+                        <div class="column is-four-fifths">
+                            <h2 class="title is-4">Holybro</h2>
+                        </div>
+                    </div>  
+                    <div id="results-carousel" class="carousel results-carousel">
                         <div class="item">
                             <div id='holybro_track_1'></div>
                             <h2 class="subtitle has-text-centered">
