--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
                 <h2 class="title">Citation</h2>
                 <pre><code>@misc{catalano2023towards,
     title={Towards Robust UAV Tracking in GNSS-Denied Environments: A Multi-LiDAR Multi-UAV Dataset}, 
-    author={Iacopo Catalano and Ha Sier and Xianjia Yu and Jorge Pena Queralta},
+    author={Iacopo Catalano and Xianjia Yu and Jorge Pena Queralta},
     year={2023},
     eprint={},
     archivePrefix={arXiv},
