add arxiv paper links

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <div class="publication-links">
                                         <!-- Arxiv PDF link -->
                                 <span class="link-block">
-                                    <a href="" target="_blank"
+                                    <a href="https://arxiv.org/pdf/2310.09165.pdf" target="_blank"
                                     class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fas fa-file-pdf"></i>
@@ -98,7 +98,7 @@
 
                                     <!-- ArXiv abstract Link -->
                                 <span class="link-block">
-                                    <a href="" target="_blank"
+                                    <a href="https://arxiv.org/abs/2310.09165" target="_blank"
                                     class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="ai ai-arxiv"></i>
