Update paper reference

--- a/index.html
+++ b/index.html
@@ -835,13 +835,13 @@
         <section class="section" id="BibTeX">
             <div class="container is-max-desktop content">
                 <h2 class="title">Citation</h2>
-                <pre><code>@misc{catalano2023towards,
-    title={Towards Robust UAV Tracking in GNSS-Denied Environments: A Multi-LiDAR Multi-UAV Dataset}, 
-    author={Iacopo Catalano and Xianjia Yu and Jorge Pena Queralta},
-    year={2023},
-    eprint={},
-    archivePrefix={arXiv},
-    primaryClass={cs.RO}
+                <pre><code>@inproceedings{catalano2023towards,
+      title={Towards robust uav tracking in gnss-denied environments: a multi-lidar multi-uav dataset},
+      author={Catalano, Iacopo and Yu, Xianjia and Queralta, Jorge Pe{\~n}a},
+      booktitle={2023 IEEE International Conference on Robotics and Biomimetics (ROBIO)},
+      pages={1--7},
+      year={2023},
+      organization={IEEE}
     }
                 </code></pre>
             </div>
